--- a/Algos/Queues/index.html
+++ b/Algos/Queues/index.html
@@ -1,5 +1,16 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
     <script src="SLNode.js" type="text/javascript"></script>
     <script src="SLQueue.js" type="text/javascript"></script>
+    <script src="StandAlones.js" type="text/javascript"></script>
+</head>
+<body>
+    
+</body>
 </html>
+
