--- a/Algos/ArraysII/index.html
+++ b/Algos/ArraysII/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="minRotatedSorted.js"></script>
     <script src="removeDuplicates.js"></script>
+    <script src="mode.js"></script>
     <title>Document</title>
 </head>
 <body>
